--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-vector-icons/lucide": "^12.0.1",
     "@react-navigation/bottom-tabs": "7.4.2",
     "@react-navigation/native": "7.1.14",
     "@react-navigation/native-stack": "7.3.21",
     "@react-navigation/stack": "7.4.2",
+    "axios": "^1.10.0",
     "expo": "~53.0.13",
     "expo-status-bar": "~2.2.3",
     "nativewind": "4.1.23",
