--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.kitchenutensilsapp"
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +22,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.kitchenutensils.app"
+      "package": "com.anonymous.kitchenutensilsapp"
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -31,7 +32,7 @@
       [
         "@react-native-google-signin/google-signin",
         {
-          "iosUrlScheme": "com.googleusercontent.apps._some_id_here_"
+          "iosUrlScheme": "com.googleusercontent.apps.1050346898312-9hq8c213v6034fthnsdu8og6m9k6ahef.apps.googleusercontent.com"
         }
       ]
     ]
