--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-vector-icons/lucide": "^12.0.1",
     "@react-navigation/bottom-tabs": "7.4.2",
+    "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "7.1.14",
     "@react-navigation/native-stack": "7.3.21",
     "@react-navigation/stack": "7.4.2",
