--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/lucide": "^12.0.1",
     "@react-navigation/bottom-tabs": "7.4.2",
     "@react-navigation/drawer": "^7.5.3",
