--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-splash-screen": "3.3.0"
+    "react-native-splash-screen": "3.3.0",
+    "expo-document-picker": "~13.1.6",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
